--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^4.5.2"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object":"^7.21.11"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
