--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object":"^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
